# SQLAdvisor

./: Dockerfile
.github/workflows/: main.yml
doc/: QUICK_START.md
sqladvisor/: CMakeLists.txt
